@@ -2,6 +2,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+pts-core: Resolve possibility of first graph missing when exporting results as PDF
 phodevi: WSLFS (Windows Subsystem for Linux) file-system detection
 phodevi: Add monitor detection based on parsing EDID supplied by `xrandr --prop` (works well for newer NVIDIA setups)
 
